# wasm-model-viewer-core

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: controller.rs  lib.rs  logger.rs  matrix_helper.rs  object_loader.rs  shaders.rs  utils.rs  webgl.rs
src/engine_webgl2/: mod.rs
src/webgl2_frame/: animations.rs  mod.rs  models.rs  object_loader.rs  shaders.rs
src/webgl2_wavefront_object/: mod.rs  object_loader.rs
