[package]
name = "wasm-model-viewer-core"
version = "0.1.0"
authors = ["jwstamp"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.77"
webgl-matrix = "0.1.0"
wasm-bindgen = "0.2.100"
wavefront_obj = "10.0.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rand = "0.9.0"
base64 = "0.22.1"
libmath = "0.2.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"

[dependencies.web-sys]
version = "0.3.77"
features = [
  'console',
  'Document',
  'Element',  
  'HtmlCanvasElement',
  'ImageBitmap',
  'MouseEvent',
  'Performance',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlShader',
	'WebGlTexture',
  'Window',
]

